--- a/src/components/table/user.scss
+++ b/src/components/table/user.scss
@@ -2,11 +2,16 @@
     display: flex;
 
     .navbaruser{
-        flex: 6;
+        flex: 5;
         
         .userTable
         {
           padding: 20px;
+          .listTitle{
+            font-size: 20px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color:#F9842C;
+          }
           .userbtn{
             margin-left: 75rem;
           }
