--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,6 +2,11 @@
     display: flex;
 
     .dashbordNav{
-     flex: 6;
+     flex: 5;
+
+     .widget{
+        padding: 20px;
+        gap: 10px;
+        }
     }
 }
